# rustup_prompt_helper

./: Cargo.toml  LICENSE-MIT  README.md
src/: main.rs
