[package]
name = "rustup_prompt_helper"
version = "1.1.0"
authors = ["János Illés <ijanos@gmail.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/ijanos/rustup_prompt_helper"
repository = "https://github.com/ijanos/rustup_prompt_helper"
description = """
A small command line utility that prints the active rustup
toolchain for the current working directory"""

[dependencies]
toml = "0.4"
